test-policies-pass/validating/block-pod-exec/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: block-pod-exec-binding
spec:
  policyName: block-pod-exec
  validationActions:
  - Deny
